Add new translations

--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -96,6 +96,7 @@
 	"ui_browse_offline_error" : "[[[Platform]]] servers are offline. The [[[Platform]]] team is repairing the servers, please try again later.",
 	"ui_browse_download_error_restart_steam" : "[[[Platform]]] download failed.<br/><a class='btn btn-default' href='[[[var_url_faqdownloads]]]'>Help</a>",
 	"ui_browse_resolution_settings": "Resolution Settings",
+	"ui_browse_gallery_block_info" : "{{count}} blocked wallpaper(s). Click here to view them.",
 
 	"ui_browse_details_author" : "Author:",
 	"ui_browse_details_author_pending" : "< Pending >",
@@ -382,6 +383,9 @@
 	"ui_browse_preset_modal_paste" : "Paste",
 	"ui_browse_preset_modal_show_all" : "Show all",
 	"ui_browse_preset_modal_empty" : "You have not created any presets for this wallpaper yet.",
+	
+	"ui_browse_blocklist_empty" : "You have not blocked any users.",
+	"ui_browse_blocklist_modal_header" : "Manage Blocklist",
 
 	"ui_browse_list_source_installed" : "Installed",
 	"ui_browse_list_source_workshop" : "Workshop",
@@ -413,10 +417,15 @@
 
 	"ui_browse_explore_home" : "Home",
 	"ui_browse_explore_favorites" : "Favorite Wallpapers",
-	"ui_browse_explore_starred" : "Followed Content",
+	"ui_browse_explore_followed_content" : "Followed Content",
 	"ui_browse_explore_search" : "Search",
 	"ui_browse_explore_disliked" : "Disliked",
 	"ui_browse_explore_see_more" : "see more",
+	"ui_browse_explore_your_content" : "Your Content",
+	"ui_browse_explore_your_upvotes" : "Your Upvotes",
+	"ui_browse_explore_your_wallpapers" : "Your Wallpapers",
+	"ui_browse_explore_friends_favorites" : "Friends' Favorites",
+	"ui_browse_explore_friends_created" : "Created by Friends",
 	"ui_browse_explore_category_genre_popular" : "Popular <b>{{genre}}</b> wallpapers",
 	"ui_browse_explore_category_genre_popular_approved": "Popular <b>approved</b> wallpapers",
 	"ui_browse_explore_category_genre_recent" : "Recent <b>{{genre}}</b> wallpapers",
@@ -436,11 +445,12 @@
 	"ui_browse_explore_category_keyword_recent" : "Recent <b>{{keyword}}</b> wallpapers",
 	"ui_browse_explore_category_keyword_most_subscribed" : "Most subscribed <b>{{keyword}}</b> wallpapers",
 	"ui_browse_explore_category_keyword_new" : "New <b>{{keyword}}</b> wallpapers",
-	"ui_browse_explore_category_followed" : "Created by followed users",
-	"ui_browse_explore_category_friends_created" : "Created by friends",
-	"ui_browse_explore_category_friends_favorites" : "Friends' favorite wallpapers",
-	"ui_browse_explore_category_user_favorites" : "Your favorite wallpapers",
-	"ui_browse_explore_category_user_up_voted" : "Your upvoted wallpapers",
+	"ui_browse_explore_category_followed" : "Created by Followed Users",
+	"ui_browse_explore_category_friends_created" : "Created by Friends",
+	"ui_browse_explore_category_friends_favorites" : "Friends' Favorite Wallpapers",
+	"ui_browse_explore_category_user_favorites" : "Your Favorite Wallpapers",
+	"ui_browse_explore_category_user_up_voted" : "Your Upvoted Wallpapers",
+	"ui_browse_explore_category_user_created" : "Wallpapers Created by You",
 	"ui_browse_explore_category_seasonal_collection" : "Recommended <b>seasonal</b> {{emoji}} wallpapers",
 	"ui_browse_explore_category_classics" : "All-time classics {{emoji}}",
 	"ui_browse_explore_category_led_support" : "Great with Razer Chroma & Corsair iCUE {{emoji}}",
@@ -500,6 +510,7 @@
 	"ui_browse_context_menu_browse_by_author" : "Browse all by {{author}} ({{count}})",
 	"ui_browse_context_menu_block_author" : "Block {{author}}",
 	"ui_browse_context_menu_unblock_author" : "Unblock {{author}}",
+	"ui_browse_context_menu_manage_blocklist" : "Manage Blocklist",
 	"ui_browse_context_menu_send_to" : "Send to {{name}}",
 	"ui_browse_context_menu_send_to_device" : "Send to Mobile Device",
 	"ui_browse_context_menu_export_pkg" : "Export .mpkg",
@@ -608,10 +619,10 @@
 	"ui_browse_mobile_upload_modal_preset_section_pre_rendered" : "Pre-Rendered",
 	"ui_browse_mobile_upload_modal_show_advanced_settings" : "Show advanced settings",
 	"ui_browse_mobile_upload_modal_video_preset" : "Video Preset",
-	"ui_browse_mobile_upload_modal_video_preset_1080_30" : "Full HD - 30 FPS",
-	"ui_browse_mobile_upload_modal_video_preset_1080_60" : "Full HD - 60 FPS",
-	"ui_browse_mobile_upload_modal_video_preset_2160_30" : "4K UHD - 30 FPS",
-	"ui_browse_mobile_upload_modal_video_preset_2160_60" : "4K UHD - 60 FPS",
+	"ui_browse_mobile_upload_modal_video_preset_auto" : "Automatic - {{resolution}}",
+	"ui_browse_mobile_upload_modal_video_preset_1080" : "Full HD",
+	"ui_browse_mobile_upload_modal_video_preset_2160" : "4K UHD",
+	"ui_browse_mobile_upload_modal_video_fps" : "FPS",
 	"ui_browse_mobile_upload_modal_video_cropping" : "Video Cropping",
 	"ui_browse_mobile_upload_modal_video_cropping_phone" : "Fit to phone screen",
 	"ui_browse_mobile_upload_modal_video_cropping_disabled" : "Keep original aspect ratio",
@@ -701,6 +712,7 @@
 	"ui_settings_gfx_enabled" : "Enabled",
 	"ui_settings_gfx_disabled" : "Disabled",
 	"ui_settings_gfx_ultra" : "Ultra",
+	"ui_settings_gfx_ultra_display_hdr" : "Ultra (Display HDR)",
 	"ui_settings_gfx_tooltip_warn_post_processing_ultra" : "Ultra mode adds HDR bloom to supported wallpapers and is only recommended for powerful high-end desktop graphics cards.",
 	"ui_settings_gfx_tooltip_warn_msaa" : "x8 MSAA is only recommended for powerful high-end desktop graphics cards.",
 
@@ -772,6 +784,8 @@
 	"ui_settings_advanced_stop_on_low_vram" : "Pause when VRAM is exhausted:",
 	"ui_settings_advanced_enable_browser_transparency" : "Show UI transparency option:",
 	"ui_settings_advanced_mini_mode_minimize" : "Hide other applications in mini mode:",
+	"ui_settings_advanced_high_precision_timers" : "Use high-precision timers:",
+	"ui_settings_advanced_high_precision_timers_hint" : "Enabling high-precision timers will reduce stuttering in scene wallpapers and provide more consistent and precise FPS. It may also impact power and CPU usage, therefore the effect will be reduced on laptops to consume less power while running on battery.",
 	"ui_settings_about_changelog" : "Changelog",
 	"ui_settings_about_community_hub" : "Community Hub",
 	"ui_settings_about_faq" : "Support & Frequently Asked Questions",
@@ -995,6 +1009,7 @@
 	"ui_editor_modal_video_file_invalid_body" : "The selected video file {{file}} is too large. You can only upload videos to Workshop that are smaller than {{size}}.<br/><br/>This restriction is <i>only</i> for the Workshop, you can of course still use this video as a wallpaper for yourself by simply dragging it into the wallpaper browser or clicking <i>Open Wallpaper</i> in the browser.",
 	"ui_editor_modal_project_files_invalid_header" : "Project Too Large",
 	"ui_editor_modal_project_files_invalid_body" : "The selected project files are too large. You can only upload a project to the Workshop that is smaller than {{size}}.<br/><br/>This restriction is <i>only</i> for the Workshop, you can of course still use this project as a wallpaper for yourself by simply dragging it into the wallpaper browser or clicking <i>Open Wallpaper</i> in the browser.",
+	"ui_editor_modal_project_files_invalid_toast" : "You can only upload a project to the Workshop that is smaller than {{size}}.",
 
 	"ui_editor_delete_project_modal_header" : "Confirm Deletion",
 	"ui_editor_delete_project_modal_body" : "Are you sure that you want to permanently delete the project: <br/><b>{{title}}</b> ?<br/><br/>You will <b>not</b> be able to update or use this project after deleting it.",
@@ -1427,7 +1442,7 @@
 	"ui_editor_user_properties_link" : "Link",
 	"ui_editor_user_properties_combo_value" : "Selected combo value for this link:",
 
-	"ui_editor_snapshot_instructions" : "1. Draw a rectangle with the mouse.\n2. Press enter to take a snapshot.\n\nPress Space to pause.\nPress Escape to cancel.",
+	"ui_editor_snapshot_instructions" : "1. Draw a rectangle with the mouse.\n2. Press enter to take a snapshot.\n\nPress Space to pause.\nPress S to skip 10 seconds ahead.\nPress Escape to cancel.",
 
 	"ui_editor_workshop_rules_modal_title" : "Workshop Rules",
 	"ui_editor_workshop_rules_modal_body" : "Before submitting your wallpaper to the Workshop, make sure that it does not violate the [[[Platform]]] Terms of Service, otherwise it will be removed:",
@@ -1606,11 +1621,13 @@
 	"ui_editor_effects_modal_imagelayer_description" : "Import an image from your computer.",
 	"ui_editor_effects_modal_textlayer_name" : "Text Layer",
 	"ui_editor_effects_modal_textlayer_description" : "Place text on the wallpaper.",
-	"ui_editor_effects_modal_fullscreenlayer_name" : "Fullscreen Layer",
-	"ui_editor_effects_modal_fullscreenlayer_description" : "Add a translucent layer that covers the entire screen. Any effects applied to this layer will affect objects that have been drawn to the screen before this layer.",
+	"ui_editor_effects_modal_fullscreenlayer_name" : "Post-Processing Layer",
+	"ui_editor_effects_modal_fullscreenlayer_description" : "Add a translucent layer that covers the entire screen. Any effects applied to this layer will affect objects that have been drawn to the screen before this layer.<br/><br/>This layer will always be aligned to the screen and will not move with the wallpaper. It should be used for fullscreen effects that don't require precise alignment or masks, to get the best quality independent of screen size.",
+	"ui_editor_effects_modal_projectlayer_name" : "Full Composition Layer",
+	"ui_editor_effects_modal_projectlayer_description" : "Add a translucent layer that automatically covers the entire wallpaper. Any effects applied to this layer will affect objects that have been drawn before this layer.<br/><br/>This layer requires more performance than the post-processing layer and should only be used if you want to align effects accurately with the wallpaper, independent from the wallpaper alignment or screen size.",
 	"ui_editor_effects_modal_solidlayer_name" : "Solid Layer",
 	"ui_editor_effects_modal_solidlayer_description" : "Adds a solid layer with a background of a simple color. Can be used in combination with other effects.",
-	"ui_editor_effects_modal_composelayer_name" : "Composition Layer",
+	"ui_editor_effects_modal_composelayer_name" : "Adjustable Composition Layer",
 	"ui_editor_effects_modal_composelayer_description" : "Add a translucent layer of specific size. Attach other objects as children to this layer to combine them into a single texture which you can apply effects to.",
 	"ui_editor_effects_modal_model_name" : "Model",
 	"ui_editor_effects_modal_model_description" : "Import a 3D model from your computer.",
@@ -1927,6 +1944,7 @@
 	"ui_editor_properties_bounds" : "Bounds",
 	"ui_editor_properties_brightness" : "Brightness",
 	"ui_editor_properties_browse" : "Browse",
+	"ui_editor_properties_calculated_depth" : "Calculated depth",
 	"ui_editor_properties_cast_type" : "Cast type",
 	"ui_editor_properties_center" : "Center",
 	"ui_editor_properties_chromatic_aberration" : "Chromatic aberration",
@@ -1951,10 +1969,10 @@
 	"ui_editor_properties_create" : "Create",
 	"ui_editor_properties_crop_transparent_area" : "Crop transparent area",
 	"ui_editor_properties_culling" : "Culling",
-	"ui_editor_properties_current_depth" : "Current depth: {{order}}",
 	"ui_editor_properties_cutout" : "Cutout",
 	"ui_editor_properties_date" : "Date",
 	"ui_editor_properties_default" : "Default",
+	"ui_editor_properties_default_depth" : "Default depth: {{order}}",
 	"ui_editor_properties_delimiter" : "Delimiter",
 	"ui_editor_properties_depth" : "Depth",
 	"ui_editor_properties_depth_map" : "Depth map",
@@ -2067,8 +2085,6 @@
 	"ui_editor_properties_lock_to_pointer" : "Lock to pointer",
 	"ui_editor_properties_locked" : "Locked",
 	"ui_editor_properties_loop" : "Loop",
-	"ui_editor_properties_make_background_bone" : "Make Background Limb",
-	"ui_editor_properties_make_foreground_bone" : "Make Foreground Limb",
 	"ui_editor_properties_mask" : "Mask",
 	"ui_editor_properties_mask_opacity" : "Mask opacity",
 	"ui_editor_properties_material" : "Material",
@@ -2087,11 +2103,9 @@
 	"ui_editor_properties_mode" : "Mode",
 	"ui_editor_properties_model" : "Model",
 	"ui_editor_properties_monochrome" : "Monochrome",
-	"ui_editor_properties_move_bone_behind_parent" : "Move Bone behind Parent",
-	"ui_editor_properties_move_bone_in_front_parent" : "Move Bone in front of Parent",
+
 	"ui_editor_properties_move_bone_to_front" : "Move Limb to Front",
-	"ui_editor_properties_move_bone_to_back" : "Move Limb to Back",
-	"ui_editor_properties_multiply" : "Multiply",
+	"ui_editor_properties_move_bone_to_back" : "Move Limb to Back",	"ui_editor_properties_multiply" : "Multiply",
 	"ui_editor_properties_mute_in_editor" : "Mute in editor",
 	"ui_editor_properties_name" : "Name",
 	"ui_editor_properties_no_bones_selected" : "No Bones Selected",
@@ -2111,6 +2125,7 @@
 	"ui_editor_properties_nothing_to_configure" : "Nothing to configure",
 	"ui_editor_properties_number_of_textures" : "Number of textures",
 	"ui_editor_properties_offset" : "Offset",
+	"ui_editor_properties_offset_depth" : "Offset depth",
 	"ui_editor_properties_occlusion_performance" : "Occlusion Performance",
 	"ui_editor_properties_occlusion_quality" : "Occlusion Quality",
 	"ui_editor_properties_opacity" : "Opacity",
@@ -2402,5 +2417,6 @@
 	"ui_provider_error_limit_exceeded" : "[[[Platform]]] has encountered a request limit.",
 	"ui_provider_error_io_failure" : "[[[Platform]]] has run into problems reading or writing files to and from your hard disk.",
 	"ui_provider_error_read_only" : "[[[Platform]]] service is read-only. If you changed your password recently, [[[Platform]]] does not allow uploading new content. This problem usually resolves itself after a few days.",
-	"ui_provider_error_failed_setting_item_data" : "[[[Platform]]] failed applying new Workshop information."
+	"ui_provider_error_failed_setting_item_data" : "[[[Platform]]] failed applying new Workshop information.",
+	"ui_provider_error_ctx_create_ugc_rate_limit_exceeded" : "[[[Platform]]] has rejected your Workshop submission because you are uploading too often. Please try again in a few minutes."
 }
