--- a/locale/core_en-us.json
+++ b/locale/core_en-us.json
@@ -20,7 +20,7 @@
 
 	"core_balloon_info" : "Wallpaper Engine minimized to your tray. Double click the tray icon to select a wallpaper.",
 	"core_balloon_desktop_window_error" : "Failed preparing desktop for live wallpaper.",
-	"core_balloon_video_error" : "Windows video error occurred {{err}}. Click me for help.",
+	"core_balloon_video_error" : "Windows video error: {{err}}. Click here for help.",
 	"core_balloon_app_error" : "Failed loading application as wallpaper.",
 	"core_balloon_pkg_version_error" : "This wallpaper requires a newer version of Wallpaper Engine. Please update Wallpaper Engine to the latest version on [[[Platform]]].",
 	"core_balloon_wallpaper_file_missing" : "This wallpaper cannot be opened because it is missing its files.",
@@ -61,8 +61,8 @@
 	"core_updater_status_closing_processes_wait_quit_terminate" : "Closing {{program}}",
 	"core_updater_status_closing_processes_wait_quit_terminate_error" : "Failed to close {{program}}",
 	"core_updater_status_distro" : "Unpacking files...",
-	"core_updater_status_distro_prepare_error" : "Boost error while scanning source directory {{error}}",
-	"core_updater_status_distro_copy_error" : "Boost error while copying files {{error}}",
+	"core_updater_status_distro_prepare_error" : "File system error while scanning source directory {{error}}",
+	"core_updater_status_distro_copy_error" : "File system error while copying files {{error}}",
 	"core_updater_status_distro_missing" : "Missing distribution directory",
 	"core_updater_status_distro_file_path_error" : "Failed to convert file path: {{error}}",
 	"core_updater_status_distro_file_directory" : "Creating directory: {{filepath}}",
