--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -635,6 +635,11 @@
 	"ui_browse_mobile_firewall_warning_fix" : "Fix Firewall",
 	"ui_browse_mobile_upload_size_warning_title" : "Mobile Wallpaper Size Limit",
 	"ui_browse_mobile_upload_size_warning_message" : "Wallpapers larger than 4GB can currently not be transferred to mobile devices.",
+	"ui_browse_mobile_upload_modal_outdated_device_warning_title" : "Mobile App Out of Date",
+	"ui_browse_mobile_upload_modal_outdated_device_warning_message_some" : "Some wallpapers cannot be uploaded to the mobile app because it is out of date.",
+	"ui_browse_mobile_upload_modal_outdated_device_warning_message_some_ext" : "<br/><br/>The following wallpapers require the latest mobile app version and will be skipped:",
+	"ui_browse_mobile_upload_modal_outdated_device_warning_message_all" : "All selected wallpapers cannot be uploaded to the mobile app because it is out of date.",
+	"ui_browse_mobile_upload_modal_outdated_device_warning_message_shared" : "Please update the mobile app so it supports the latest Wallpaper Engine features.<br/><br/>Please note that some mobile app stores take a couple of days to publish app updates to all users. If your app store has not yet made the update available to you, please be patient and check again later.",
 
 	"ui_browse_mobile_upload_cancel_title" : "Cancel Mobile Uploads",
 	"ui_browse_mobile_upload_cancel_body" : "Are you sure that you want to cancel all pending uploads to your mobile device?",
@@ -878,7 +883,7 @@
 	"ui_settings_video_framework_prefer_chromium" : "Prefer Chromium",
 	"ui_settings_video_framework_prefer_native" : "Prefer Native",
 	"ui_settings_use_safe_mode" : "Protect against crashes:",
-	"ui_settings_use_safe_mode_hint" : "This option will stop Wallpaper Engine from loading the currently selected wallpapers after a crash.<br/><br/>If the downloaded wallpaper files from Steam are broken or there is an underlying system issue, this option can help you to remove the broken wallpaper and switch to a working one.<br/><br/>In general there is no need to disable this option. If you have persistent hardware or driver problems that make program crashes inevitable, you can disable this and Wallpaper Engine will then load the last wallpapers even after a crash.",
+	"ui_settings_use_safe_mode_hint" : "This option will stop Wallpaper Engine from loading the currently selected wallpapers after a crash.<br/><br/>If the wallpaper files downloaded by [[[Platform]]] are broken or there is an issue with a core component of your operating system, this option can help you to remove the broken wallpaper and switch to a working one.<br/><br/>In general there is no need to disable this option. If you have persistent hardware or driver problems that make program crashes inevitable, you can disable this and Wallpaper Engine will then load the last wallpapers even after a crash.",
 	"ui_settings_disable_slideshow" : "Remove Windows wallpaper fade:",
 	"ui_settings_disable_slideshow_tip" : "When this option is enabled, Wallpaper Engine will attempt to remove the wallpaper fade effect that Windows uses by default when switching Windows wallpapers and when logging into Windows. Removing this Windows behavior is not perfectly possible and the fade effect may still flash up for a brief moment.",
 	"ui_settings_ui_hardware_acceleration" : "UI hardware acceleration:",
@@ -1475,7 +1480,7 @@
 	"ui_editor_user_properties_link" : "Link",
 	"ui_editor_user_properties_combo_value" : "Selected combo value for this link:",
 	"ui_editor_user_properties_delete_warning_title" : "Removing Published User Property",
-	"ui_editor_user_properties_delete_warning_message" : "If you remove an existing property from a published wallpaper you will break any settings and presets that other users have already created from your wallpaper.<br/><br/>We strongly recommend against this unless you have only published the wallpaper very recently or if you are removing a user property that was unused previously.",
+	"ui_editor_user_properties_delete_warning_message" : "If you remove an existing property from a published wallpaper, you will break any settings and presets that other users have already created from your wallpaper.<br/><br/>We strongly recommend against this unless you have only published the wallpaper very recently or if you are removing a user property that was unused previously.",
 	"ui_editor_user_properties_delete_warning_confirm" : "Delete Property",
 	
 	"ui_editor_clean_project_modal_header" : "Clean Project",
