--- a/locale/core_en-us.json
+++ b/locale/core_en-us.json
@@ -37,17 +37,19 @@
 	"core_msgbox_dwm_disabled" : "Desktop composition is disabled.",
 	"core_msgbox_aero_denied" : "Wallpaper Engine cannot work without Windows Aero and will now quit.",
 	"core_msgbox_aero_failure" : "Failed to enable Aero.\n\nIt looks like Windows is preventing Aero from being enabled, unfortunately it is an important requirement and Wallpaper Engine cannot work without it.\n\nTry to enable Aero in the Windows theme options directly and start Wallpaper Engine again.",
-	"core_msgbox_aero_failure_no_support" : "Failed to enable Aero. It looks like you are using a Starter or Basic version of Windows 7, which does not support Aero and does not fulfill the minimum system requirements. If you can get Aero to work nonetheless, Wallpaper Engine will work.",
 	"core_msgbox_init_secondinstance_ask_quit" : "Wallpaper Engine appears to be running already and does not respond.\n\nDo you want to restart it forcefully?",
 	"core_msgbox_init_secondinstance_failed" : "Restart failed, error code:",
-	"core_msgbox_below_win_7" : "Wallpaper Engine requires Windows 7 or up, it is a system requirement.\n\nIt looks like you are running an unsupported version of Windows and Wallpaper Engine may not work.",
-	"core_msgbox_media_feature_pack_missing" : "mfplat.dll missing!\nYou possibly have Windows N. Please install the Media Feature Pack by Microsoft to enable video support! (Google: Media Feature Pack Windows 10/8.1/7)\n\nIf you keep seeing this error, you have not installed the right pack yet.",
+	"core_msgbox_below_win_7" : "Wallpaper Engine requires Windows 10 or up, it is a system requirement.\n\nIt looks like you are running an unsupported version of Windows and Wallpaper Engine may not work.",
+	"core_msgbox_media_feature_pack_missing" : "mfplat.dll missing!\nYou possibly have Windows N. Please install the Media Feature Pack by Microsoft to enable video support! (Google: Media Feature Pack Windows 11/10)\n\nIf you keep seeing this error, you have not installed the right pack yet.",
 	"core_msgbox_ui_file_not_found" : "The program files cannot be opened.\n\nYou might have invalid characters in the installation path, the file might be missing or the program might be blocked by an anti-virus.\n\nTry installing Wallpaper Engine in the same directory as [[[Platform]]] or create a [[[Platform]]] library with simple characters.",
 	"core_msgbox_trial_expired_title" : "Trial Version Expired",
 	"core_msgbox_trial_expired_body" : "The trial version has expired and Wallpaper Engine will now close.\n\nYou have to purchase Wallpaper Engine on [[[Platform]]] if you would like to continue using it, thank you!",
 	"core_msgbox_scene_dx10_err" : "DirectX 10 not supported by your graphics card or your graphics driver is broken. Windows reports:",
 
 	"core_fatal_window_creation_failed" : "Failed to create wallpaper window (Error {{error}}). This is usually related to broken graphics card drivers. Perform a clean reinstallation of your graphics card drivers and restart your computer.",
+
+	"core_msgbox_below_win10_title" : "Unsupported Windows Version",
+	"core_msgbox_below_win10_body" : "You are trying to use the latest version of Wallpaper Engine on an unsupported version of Windows, such as Windows 7 or 8.\n\nPlease switch to the beta named 'Windows 7 support' of Wallpaper Engine through the Steam game properties first.",
 
 	"core_updater_title" : "Wallpaper Engine Updater",
 	"core_updater_headline_init" : "Setting up Wallpaper Engine...",
